Added lecture template and started lecture 2.

--- a/astro400B_definitions.tex
+++ b/astro400B_definitions.tex
@@ -1,4 +1,6 @@
 
+%average
+\newcommand{\ave}[1]{\langle#1\rangle}
 %radian
 \newcommand{\rad}{\mathrm{rad}}
 
@@ -28,7 +30,8 @@
 
 %second
 \newcommand{\s}{\mathrm{s}}
-
+\newcommand{\yr}{\mathrm{yr}}
+\newcommand{\Gyr}{\mathrm{Gyr}}
 
 %solar mass
 \newcommand{\Msun}{M_{\odot}}
