Working through the Milky Way SG subchapter.

--- a/astro400B_definitions.tex
+++ b/astro400B_definitions.tex
@@ -19,6 +19,9 @@
 %parsec
 \newcommand{\pc}{\mathrm{pc}}
 
+%kiloparsec
+\newcommand{\kpc}{\mathrm{kpc}}
+
 %megaparsec
 \newcommand{\Mpc}{\mathrm{Mpc}}
 
