--- a/astro400B_lecture_1.tex
+++ b/astro400B_lecture_1.tex
@@ -64,7 +64,8 @@ c = 2.9979245800\times10^{10} \cm~\s^{-1}.
 \end{equation}
 \noindent
 Note that astronomers typically prefer $\pc$ to $\ly$. We also
-use the units {\it megaparsecs} ($\Mpc = 10^6 \pc$) and {\it gigaparsecs}
+use the units {\it kiloparsecs} ($\kpc = 10^{3}pc$), 
+{\it megaparsecs} ($\Mpc = 10^6 \pc$), and {\it gigaparsecs}
 ($\Gpc = 10^9 \pc$).
 
 %mass, luminosity and temperature
