--- a/astro400B_lecture_2.tex
+++ b/astro400B_lecture_2.tex
@@ -148,4 +148,121 @@ M_{\mathrm{bol}} = M_V - \mathrm{BC}
 \end{equation}
 For the Sun in Vega magnitudes, $\mathrm{BC}\approx0.07$.
 
+\section{The Milky Way}
+
+The Milky Way is a fantastic galaxy, and not just because we live there.
+It has a terrific richness of structure and complexity, and simply put we
+currently do not know how such a galaxy forms.
+
+The main structures of the Milky Way are ({\bf See Figure 1.8 of Sparke and Gallagher})
+
+\begin{enumerate}
+
+
+\item The dark matter halo, consisting of (presumably) subatomic particles that
+participate only in weak (Weak, gravitational force) interactions. The mass of
+the Milky Way halo is about $10^{12}\Msun$. The radius of the dark matter halo
+is roughly $300\kpc$. The dark matter halo is thought to obey a roughly broken
+power-law density profile, with $\rho\propto r^{-1}$ within about $30\kpc$ and
+$\rho\propto r^{-3}$ in the exterior.
+
+\item The stellar halo, consisting of old, metal-poor stars and globular clusters
+(old clusters of $\sim10^{5}-10^{6}$ stars). The stellar halo is only about
+$10^{9}\Msun$.
+
+\item The central bulge of the galaxy is a pseudospheroidal distribution of
+stars with a luminosity of $L\approx 5\times 10^{9}\Lsun$ 
+and mass $2\times10^{10}\Msun$.
+
+\item The supermassive black hole at the center of the Milky Way, which has a
+mass of about $\approx4.1\times10^{6}\Msun$.
+
+\item The stellar disk of the galaxy is roughly exponential, such that
+the surface density scales as $\Sigma(r) \propto \exp(-r/h)$, 
+with a scale length $h\approx3\kpc$. The total luminosity of the disk
+is about $2\times10^{10}\Lsun$ and with a mass in stars of
+about $6\times10^{10}\Msun$. The stellar disk has a {\it thin disk} 
+component with
+a scale height of about $300\pc$ containing $95\%$ of the mass, and a
+{\it thick disk} containing about $5\%$ with a scale height of about $1\kpc$.
+
+\item The gaseous disk of the galaxy is a thin layer about a $100\pc$ thick
+consisting mostly of neutral hydrogen (HI) and molecular hydrogen (H$_2$) gas.
+The gaseous disk also contains a warm ionized and hot ionized interstellar medium
+(see below).
+The gaseous disk is also very dusty!
+
+\end{enumerate}
+
+\section{Ionized Gas}
+
+The Milky Way (and other galaxies) contain a variety of ions of various elements,
+and the emission and absorption mechanisms of this gas enables us to learn a lot
+about the galaxies observationally. The radiation emitted by the gas can be
+in the form of spectral lines or continuum processes (like bound-free emission).
+
+Atoms and ions produce line emission when electrons move between orbitals and
+release the corresponding energy difference between orbitals as a photon.
+Recombination radiation occurs when free electrons get captured into an orbital
+and release the corresponding free energy difference as light. {\it Balmer} lines
+from Hydrogen correspond to electrons entering the $n=2$ state, while the {\it Lyman}
+series corresponds to transitions to the $n=1$ state. Transitions between $n=2$ and
+$n=1$ correspond to the {\it Lyman} $\alpha$ line at $\lambda = 1216\Ang$ (10.2eV). 
+
+\subsection{Photoionization}
+We call the process of freeing electrons from ions via the absorption of a photon
+{\it photoionization}. The energy of a photon required to photoionize an ion depends
+on the electrical properties of the ion.
+A photon of
+energy $13.6$eV or more and wavelength $\lambda=912\Ang$ or shorter can fully liberate
+an electron from the ground state of Hydrogen. Such photons are called {\it Lyman continuum}
+photons.
+
+\subsection{Collisional Ionization}
+
+For hot gas, when the mean kinetic energy $\kB T$ is comparable to the energy
+difference between levels, then {\it collisional ionization} may occur via the
+collision of two ions. In this case, we will have the reaction
+\begin{equation}
+\mathrm{A}+\mathrm{B}\to \mathrm{A}^{*} + \mathrm{B}; \mathrm{A}^{*} \to \mathrm{A} + h\nu
+\end{equation}
+\noindent
+where $h\nu \sim \kB T$ is the energy of photon emitted after the ion A is collisionally
+excited. The rate of emission depends on density, and some {\it forbidden lines} that forge 
+less probable paths through the orbital ladder of an ion require very low densities since
+their emission timescale can be of order $1\s$ (allowed lines have emission timescales that
+are $\sim10^{-8}\s$). The {\it critical density} of a line corresponds to the density where
+emission is the most likely compared with further excitation or collision. Forbidden lines 
+therefore provide information about the density and temperature of their emitting gas. We 
+typically indicate a forbidden line with the $[]$ notation, as the famous $[\mathrm{OIII}]$
+line at $\lambda=5007\Ang$.
+
 \end{document}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
