Still working on lecture 2.

--- a/astro400B_lecture_2.tex
+++ b/astro400B_lecture_2.tex
@@ -228,7 +228,10 @@ collision of two ions. In this case, we will have the reaction
 \end{equation}
 \noindent
 where $h\nu \sim \kB T$ is the energy of photon emitted after the ion A is collisionally
-excited. The rate of emission depends on density, and some {\it forbidden lines} that forge 
+excited. 
+
+\subsection{Forbidden Lines}
+The rate of emission depends on density, and some {\it forbidden lines} that forge 
 less probable paths through the orbital ladder of an ion require very low densities since
 their emission timescale can be of order $1\s$ (allowed lines have emission timescales that
 are $\sim10^{-8}\s$). The {\it critical density} of a line corresponds to the density where
@@ -236,6 +239,23 @@ emission is the most likely compared with further excitation or collision. Forbi
 therefore provide information about the density and temperature of their emitting gas. We 
 typically indicate a forbidden line with the $[]$ notation, as the famous $[\mathrm{OIII}]$
 line at $\lambda=5007\Ang$.
+
+\subsection{Fine Structure Lines}
+
+The {\it fine structure} lines of an atom correspond to level splittings that arise from
+the coupling between an electron orbital's angular momentum and the electron spin. The
+energy difference between typical orbital transitions and fine structure lines is a 
+factor of $\sim\alpha^{-2}$, where $\alpha$ is the fine structure constant
+\begin{equation}
+\alpha = \frac{1}{2\epsilon_{0}}\frac{e^2}{hc}
+\end{equation}
+\noindent
+where $\epsilon_{0}$ is the permitivity of free space, $e$ is the
+charge of the electron, $h$ is Planck's constant, and $c$ is the speed of light.
+The value of $\alpha^{-1} \approx 137.036$ is famous throughout physics.
+
+This large factor means that the fine structure lines of metals typically lie
+at wavelengths $>100\mu m$.
 
 \end{document}
 
