Working on lecture 2, done with doppler shifts.

--- a/astro400B_lecture_2.tex
+++ b/astro400B_lecture_2.tex
@@ -298,8 +298,40 @@ photons will {\it dissociate} into separate H atoms.
 
 Most molecules are collisionally excited, and are seen only
 when the $kT$ of the gas is larger than the energy of the upper
-level of the transition.
+level of the transition. Many of these 
+rotational lines will be optically thick. CO is the most
+abundant molecule after H$_2$, and has strong lines at 1.3$\mm$ and
+2.6$\mm$ from gas with densities $n(\mathrm{H}_2)\sim100-1000\cm^{-3}$
+and temperatures $T\sim10-20\K$.
+
+
+\section{Doppler Shifts}
+
+Relative motions between an emitting source and an observer
+induce a {\it Doppler shift} in the observed radiation owing
+to relativistic constraints. The observed wavelength 
+$\lambda_{\mathrm{obs}}$ of the emitted radiation is
+related to the emitted wavelength $\lambda_{\mathrm{e}}$
+by the Doppler equation
+\begin{equation}
+1+z \equiv \frac{\lambda_{\mathrm{obs}} }{\lambda_{\mathrm{e}} } = 1+\frac{v}{c}
+\end{equation}
+\noindent
+where $z$ is called the {\it redshift} 
+(and is negative in the case of a blueshift) and $v$ is the
+line-of-sight velocity.
+Objects with a receeding (positive) velocity have their
+emitted radiation observed at a longer wavelength, while
+approaching objects (with negative velocity) will have their
+radiation observed with a shorter wavelength.
+
 \end{document}
+
+
+
+
+
+
 
 
 
