--- a/astro400B_lecture_2.tex
+++ b/astro400B_lecture_2.tex
@@ -304,6 +304,14 @@ abundant molecule after H$_2$, and has strong lines at 1.3$\mm$ and
 2.6$\mm$ from gas with densities $n(\mathrm{H}_2)\sim100-1000\cm^{-3}$
 and temperatures $T\sim10-20\K$.
 
+\subsection{Continuum Emission}
+
+Continuum free-free emission, aka {\it bremsstrahlung}, involves the
+deflection of electrons off of other charged particles.
+The typical temperature of free-free emitting gas is $\sim10^7-10^8$.
+{\it Synchrotron} emission occurs when an electron is accelerated
+by a magnetic field, which typically produces radio emission from
+supernova remnants and galactic nuclei.
 
 \section{Doppler Shifts}
 
@@ -324,6 +332,39 @@ Objects with a receeding (positive) velocity have their
 emitted radiation observed at a longer wavelength, while
 approaching objects (with negative velocity) will have their
 radiation observed with a shorter wavelength.
+
+\section{Extinction}
+
+Dust absorbs and scatters optical light, and we can describe
+the rate at which light is absorbed as it travels along the
+$x$ direction through the differential relation
+\begin{equation}
+\frac{d\Flambda}{dx} = - \kappa_{\lambda} \Flambda
+\end{equation}
+\noindent
+where $\kappa_{\lambda}$ is the {\it opacity}. This relation
+has a simple solution
+\begin{equation}
+\Flambda(x) = \Flambda(x=0)\exp\left(-\int_{0}^{x} \kappa_{\lambda} dx'\right)
+\end{equation}
+\noindent
+where we can define the optical depth
+\begin{equation}
+\tau = \int_{0}^{x} \kappa_{\lambda} dx'
+\end{equation}
+\noindent
+In the limit of pure absorption, a system is {\it optically thick}
+when $\tau = 1$ and $\Flambda = \Flambda(x=0)/e$. For
+optical light, interstellar dust has approximately $\kappa_{\lambda}\propto1/\lambda$.
+
+\subsection{Dust and Gas}
+In the Milky Way, dust traces cold gas reliably. Dust along the
+line of sight can lead to visual extinction (measured in magnitudes)
+as a function of the Hydrogen column density as
+\begin{equation}
+A_{V} \approx \frac{N_{H}}{1.8\times10^{21}\cm^{2}} 
+\end{equation}
+
 
 \end{document}
 
