Working on lecture #3.

--- a/astro400B_definitions.tex
+++ b/astro400B_definitions.tex
@@ -76,3 +76,10 @@
 
 %T_bandpass
 \newcommand{\TBP}{T_{\mathrm{BP}}}
+
+%magnitude
+\newcommand{\mg}{\mathrm{mag}}
+
+
+%arcsecond
+\newcommand{\arcsec}{\mathrm{arcsec}}
