--- a/astro400B_definitions.tex
+++ b/astro400B_definitions.tex
@@ -7,6 +7,12 @@
 %astronomical unit
 \newcommand{\AU}{\mathrm{AU}}
 
+%micron
+\newcommand{\mum}{\mu\mathrm{m}}
+
+%millimeter
+\newcommand{\mm}{\mathrm{mm}}
+
 %centimeter
 \newcommand{\cm}{\mathrm{cm}}
 
@@ -83,3 +89,15 @@
 
 %arcsecond
 \newcommand{\arcsec}{\mathrm{arcsec}}
+
+%critical density
+\newcommand{\rhoc}{\rho_{\mathrm{crit}}}
+
+%proton mass
+\newcommand{\mproton}{m_{\mathrm{p}}}
+
+%electron volt
+\newcommand{\eV}{\mathrm{eV}}
+
+%gigaelectron volt
+\newcommand{\GeV}{\mathrm{GeV}}
